Se comienza con la página de panel administrativo

--- a/CaosNews/webcaosnews/templates/base.html
+++ b/CaosNews/webcaosnews/templates/base.html
@@ -71,7 +71,7 @@
             <a class="nav-link" id="escribir" href="{% url 'escr' %}"><i
                 class="fa-solid fa-pen-to-square"></i>Escribir</a>
           </li>
-          <div class="dropdown">
+          <div class="dropdown me-5">
               <button type="button" class="text-light btn btn-outline-danger dropdown-toggle" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 {{user.first_name}}
