--- a/CaosNews/webcaosnews/templates/panel.html
+++ b/CaosNews/webcaosnews/templates/panel.html
@@ -1,102 +1,149 @@
-{% extends 'base.html' %}
-{%load static %}
-{% block titulo %}
-Panel de Administrador
-{% endblock titulo%}
-{% block css %}
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
-{% endblock css %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="es">
 
-{% block contenido %}
-<!--Sidebar-->
-{% comment %} <div class="container-fluid">
-    <div class="row flex-nowrap">
-        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-danger">
-            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <span class="fs-5 d-none d-sm-inline">Menu</span>
-                </a>
-                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link align-middle px-0">
-                            <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Dashboard</span> </a>
-                        <ul class="collapse show nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
-                            <li class="w-100">
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1 </a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2 </a>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Panel de Administración</title>
+    <link rel="stylesheet" href="{% static 'css/panel.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/fontello.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gcom" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/bcac893939.js" crossorigin="anonymous"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}">
+    <link rel="mask-icon" href="{% static 'img/favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+</head>
+
+<body>
+    <div class="d-flex">
+        <!-- Sidebar -->
+        <div id="sidebar-container" class="bg-danger">
+            <div class="logo">
+                <h1 class="icon-codiepie text-light fw-bold fs-2">CAOS NEWS</h1>
+            </div>
+            <div class="menu">
+                <a href="#" class="d-block p-3 text-light"><i class="fa-solid fa-user me-2 lead"></i>Perfil</a>
+                <a href="#" class="d-block p-3 text-light"><i
+                        class="fa-solid fa-pen-to-square me-2 lead"></i>Escribir</a>
+                <a href="#" class="d-block p-3 text-light"><i
+                        class="fa-solid fa-chart-simple me-2 lead"></i>Estadísticas</a>
+                <a href="#" class="d-block p-3 text-light"><i
+                        class="fa-solid fa-sliders me-2 lead"></i>Configuración</a>
+            </div>
+
+        </div>
+        <!-- Sidebar -->
+        <!-- Navbar -->
+        <div class="w-100">
+            <nav class="navbar bg-rojo navbar-expand-lg navbar-light border-bottom">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <form class="d-flex position-relative d-inline-block">
+                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                        <button class="btn btn-search position-absolute" type="submit"><i
+                                class="fa-solid fa-magnifying-glass"></i></button>
+                    </form>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav md-auto me-5 ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    <img src="../static/img/putin.jpg" alt="Imagen de perfil"
+                                        class="img-fluid rounded-circle avatar me-2">
+                                    {{user.first_name}} {{user.last_name}}
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Mi perfil</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+                                </ul>
                             </li>
                         </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Orders</span></a>
-                    </li>
-                    <li>
-                        <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
-                            <i class="fs-4 bi-bootstrap"></i> <span class="ms-1 d-none d-sm-inline">Bootstrap</span></a>
-                        <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
-                            <li class="w-100">
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Products</span> </a>
-                            <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
-                            <li class="w-100">
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 1</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 2</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 3</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 4</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Customers</span> </a>
-                    </li>
-                </ul>
-                <hr>
-                <div class="dropdown pb-4">
-                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle">
-                        <span class="d-none d-sm-inline mx-1">loser</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-                        <li><a class="dropdown-item" href="#">New project...</a></li>
-                        <li><a class="dropdown-item" href="#">Settings</a></li>
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Sign out</a></li>
-                    </ul>
+                    </div>
                 </div>
+            </nav>
+            <!-- Navbar -->
+            <!-- Contenido -->
+            <div id="content">
+                <section class="py-3">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-lg-9 ps-5">
+                                <h1 class="fw-bold mb-0">Bienvenido, {{user.first_name}} </h1>
+                                <p class="lead text-muted">Revisa la última información</p>
+                            </div>
+                            <div class="col-lg-2 d-flex">
+                                <button class="btn btn-danger w-100 align-self-center">Descargar reporte</button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="bg-mix">
+                    <div class="container">
+                        <div class="card rounded-0">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-lg-3 d-flex stat my-3">
+                                        <div class="mx-auto">
+                                            <h6 class="text-muted">Visitas mensuales</h6>
+                                            <h3 class="fw-bold">100</h3>
+                                            <h6 class="text-success fw-light"><i class="fa-solid fa-circle-chevron-up fa-sm me-2"></i>50%</h6>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3 d-flex stat my-3">
+                                        <div class="mx-auto">
+                                            <h6 class="text-muted">Artículos escritos</h6>
+                                            <h3 class="fw-bold">467</h3>
+                                            <h6 class="text-success fw-light"><i class="fa-solid fa-circle-chevron-up fa-sm me-2"></i>30%</h6>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3 d-flex stat my-3">
+                                        <div class="mx-auto">
+                                            <h6 class="text-muted">Artículos aprobados</h6>
+                                            <h3 class="fw-bold">432</h3>
+                                            <h6 class="text-success fw-light"><i class="fa-solid fa-circle-chevron-up fa-sm me-2"></i>80%</h6>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3 d-flex my-3">
+                                        <div class="mx-auto">
+                                            <h6 class="text-muted">Artículos corregidos</h6>
+                                            <h3 class="fw-bold">458</h3>
+                                            <h6 class="text-success fw-light"><i class="fa-solid fa-circle-chevron-up fa-sm me-2"></i>10%</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
-        <div class="col py-3">
-            Content area...
-        </div>
     </div>
-</div> {% endcomment %}
-<!--Sidebar-->
 
 
-{% endblock contenido %}
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
