--- a/CaosNews/webcaosnews/static/css/panel.css
+++ b/CaosNews/webcaosnews/static/css/panel.css
@@ -46,5 +46,18 @@ a {
 }
 
 .bg-mix{
-    background:linear-gradient(180deg, #f5f5f5 50%, #DEE2E6 0);
+    background:linear-gradient(180deg, #f5f5f5 50%, #E9ECEF 0);
+}
+
+.bg-gris{
+    background-color: #E9ECEF !important;
+}
+
+@media (max-width: 768px) {
+    #sidebar-container{
+        display: none !important;
+    }
+    .stat{
+        border: 0;
+    }
 }
